--- a/stylesheets/scss/blocks/_footer.scss
+++ b/stylesheets/scss/blocks/_footer.scss
@@ -1,15 +1,43 @@
+// ФУТЕР
 .footer {
   width: 100%;
   @include flex(column, center);
 }
 
+
+
+// ВЕРХНЯЯ ЧАСТЬ ФУТЕРА
 .footer__info {
   width: 100%;
-  max-width: 1126px;
+  max-width: 1125px;
   min-height: 188px;
+  box-sizing: border-box;
   @include flex(row, end);
+
+  @include max-width-1200 {
+    max-width: calc(100% - 40px - 40px);
+  }
+
+  @include max-width-992 {
+    max-width: calc(100% - 32px - 32px);
+  }
+
+  @include max-width-576 {
+    max-width: calc(100% - 20px - 20px);
+    padding: 0 0 0 4vw;
+    @include flex(column);
+  }
+
+  @include max-width-360 {
+    max-width: calc(100% - 20px - 20px);
+    padding: 0 0 0 0;
+    @include flex(column);
+  }
 }
 
+
+
+// АДРЕС
 .footer__address {
   padding: 0 0 12px 0;
   @include flex(column);
@@ -26,6 +54,14 @@
     font-size: 18px;
     line-height: 116.66%;
     color: $color-footer;
+
+    @include max-width-768 {
+      font-size: 16px;
+    }
+
+    @include max-width-576 {
+      font-size: 18px;
+    }
   }
 
   span {
@@ -33,12 +69,35 @@
     font-size: 18px;
     line-height: 149.19%;
     color: $color-footer;
+
+    @include max-width-992 {
+      font-size: 16px;
+    }
+
+    @include max-width-768 {
+      font-size: 14px;
+    }
+
+    @include max-width-576 {
+      font-size: 16px;
+    }
   }
 }
 
+
+
+// КОНТАКТЫ
 .footer__contacts {
   padding: 0 0 12px 48px;
   @include flex(column);
+
+  @include max-width-576 {
+    padding: 32px 0 12px 0;
+  }
+
+  @include max-width-360 {
+    padding: 18px 0 12px 0;
+  }
 
   h3 {
     margin: 0 0 16px 0;
@@ -46,6 +105,18 @@
     font-size: 24px;
     line-height: 116.66%;
     color: $color-footer;
+
+    @include max-width-768 {
+      font-size: 20px;
+    }
+
+    @include max-width-576 {
+      font-size: 18px;
+    }
+
+    @include max-width-360 {
+      margin: 0 0 8px 0;
+    }
   }
 
   span {
@@ -53,9 +124,24 @@
     font-size: 18px;
     line-height: 149.19%;
     color: $color-footer;
+
+    @include max-width-992 {
+      font-size: 16px;
+    }
+
+    @include max-width-768 {
+      font-size: 14px;
+    }
+
+    @include max-width-576 {
+      font-size: 16px;
+    }
   }
 }
 
+
+
+// НИЖНЯЯ ЧАСТЬ ФУТЕРА
 .footer__copyright {
   width: 100%;
   height: 64px;
@@ -69,8 +155,115 @@
     line-height: 116.66%;
     color: $color-white;
 
+    @include max-width-992 {
+      font-size: 16px;
+    }
+
+    @include max-width-576 {
+      font-size: 14px;
+    }
+
+    @include max-width-360 {
+      font-size: 12px;
+    }
+
     span {
       @extend %roboto-500;
     }
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .footer {
+//   width: 100%;
+//   @include flex(column, center);
+// }
+
+// .footer__info {
+//   width: 100%;
+//   max-width: 1126px;
+//   min-height: 188px;
+//   @include flex(row, end);
+// }
+
+// .footer__address {
+//   padding: 0 0 12px 0;
+//   @include flex(column);
+
+//   .footer__logo {
+//     width: 120px;
+//     height: 56px;
+//     @include bg-image('../../../images/logo.svg', center, contain);
+//   }
+
+//   span:first-of-type {
+//     margin: 10px 0 8px 0;
+//     @extend %roboto-500;
+//     font-size: 18px;
+//     line-height: 116.66%;
+//     color: $color-footer;
+//   }
+
+//   span {
+//     @extend %roboto-300;
+//     font-size: 18px;
+//     line-height: 149.19%;
+//     color: $color-footer;
+//   }
+// }
+
+// .footer__contacts {
+//   padding: 0 0 12px 48px;
+//   @include flex(column);
+
+//   h3 {
+//     margin: 0 0 16px 0;
+//     @extend %roboto-500;
+//     font-size: 24px;
+//     line-height: 116.66%;
+//     color: $color-footer;
+//   }
+
+//   span {
+//     @extend %roboto-300;
+//     font-size: 18px;
+//     line-height: 149.19%;
+//     color: $color-footer;
+//   }
+// }
+
+// .footer__copyright {
+//   width: 100%;
+//   height: 64px;
+//   margin: 12px 0 0 0;
+//   @include flex(column, center, center);
+//   background-color: $color-accent;
+
+//   span {
+//     @extend %roboto-400;
+//     font-size: 18px;
+//     line-height: 116.66%;
+//     color: $color-white;
+
+//     span {
+//       @extend %roboto-500;
+//     }
+//   }
+// }
