--- a/stylesheets/scss/blocks/_about.scss
+++ b/stylesheets/scss/blocks/_about.scss
@@ -1,3 +1,4 @@
+// СЕКЦИЯ
 .about {
   width: 100%;
   padding: 60px 0 70px 0;
@@ -5,20 +6,66 @@
   @include flex(column, center);
 }
 
+
+
+// ОГРАНИЧИВАЮЩИЙ КОНТЕЙНЕР
 .about__container {
+  width: 100%;
+  max-width: 1125px;
   @include flex(row, center);
+
+  @include max-width-1200 {
+    max-width: calc(100% - 40px - 40px);
+  }
+
+  @include max-width-992 {
+    max-width: calc(100% - 32px - 32px);
+  }
+
+  @include max-width-768 {
+    @include flex(column, center);
+  }
+
+  @include max-width-576 {
+    max-width: calc(100% - 20px - 20px);
+  }
 }
 
+
+
+// ТЕКСТОВЫЙ БЛОК
 .about__info {
-  width: 100%;
-  max-width: 520px;
+  width: 50%;
+  padding: 0 0 0 12px;
+  box-sizing: border-box;
   @include flex(column);
+
+  @include max-width-768 {
+    width: 90%;
+  }
+
+  @include max-width-576 {
+    width: 100%;
+  }
 
   h2 {
     @extend %roboto-500;
     font-size: 32px;
     line-height: 133.69%;
     color: $color-heading;
+
+    @include max-width-1200 {
+      font-size: 28px;
+    }
+
+    @include max-width-992 {
+      font-size: 24px;
+    }
+
+    @include max-width-768 {
+      font-size: 20px;
+      text-align: center;
+    }
 
     span {
       color: $color-accent;
@@ -35,6 +82,18 @@
       margin: 24px 0 24px 0;
     }
 
+    @include max-width-992 {
+      font-size: 16px;
+    }
+
+    @include max-width-768 {
+      text-align: center;
+
+      &:first-of-type {
+        margin: 18px 0 18px 0;
+      }
+    }
+
     span {
       @extend %roboto-500;
       color: $color-accent;
@@ -42,8 +101,30 @@
   }
 }
 
+
+
+// ИЛЛЮСТРАЦИЯ
 .about__illustration {
-  max-width: 452px;
-  margin: 0 82px 0 0;
-  object-fit: contain;
+  width: 50%;
+  padding: 0 32px 0 32px;
+  box-sizing: border-box;
+
+  @include max-width-768 {
+    width: 70%;
+    margin: 0 0 40px 0;
+    padding: 0 0 0 0;
+  }
+
+  @include max-width-576 {
+    width: 80%;
+  }
+
+  img {
+    width: 100%;
+    max-width: 453px;
+
+    @include max-width-768 {
+      max-width: 100%;
+    }
+  }
 }
